Add triplifying DAG

--- a/airflow/r2rml/r2rml.properties.example
+++ b/airflow/r2rml/r2rml.properties.example
@@ -1,6 +1,5 @@
 # connectionURL = jdbc:postgresql://postgres/postgres
 # user = foo
 # password = bar
-mappingFile = ./r2rml.ttl
-outputFile = ./output.ttl
+mappingFile = ./mapping.ttl
 format = TURTLE
