--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -5,3 +5,6 @@ USER root
 RUN mkdir -p /usr/share/man/man1
 RUN apt-get update && apt-get install -y default-jdk && apt-get clean
 USER airflow
+
+COPY ./requirements.txt ./requirements.txt
+RUN pip3 install -r requirements.txt
