Add upload to graphdb

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ POSTGRES_DB=postgres
 # R2RML
 R2RML_CLI_DIR=/usr/local/airflow/R2RML/R2RML-cli
 R2RML_DATA_DIR=/usr/local/airflow/R2RML/data
+
+# Triplestore
+SPARQL_ENDPOINT=http://graphdb:7200/repositories/data
