Change airflow container name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
         volumes:
             - ./postgres/create_second_db.sql:/docker-entrypoint-initdb.d/create_second_db.sql
 
-    webserver:
+    airflow:
         build: ./airflow
         restart: always
         env_file: .env
