Add switch for append vs replace of CSV data

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
+# Are new CSV's treated as replacements for the existing data, or as extension?
+APPEND_CSV=0
 
 # R2RML
 R2RML_CLI_DIR=/usr/local/airflow/R2RML/R2RML-cli
