Add support for external SQL DB

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ APPEND_CSV=0
 # R2RML
 R2RML_CLI_DIR=/usr/local/airflow/R2RML/R2RML-cli
 R2RML_DATA_DIR=/usr/local/airflow/R2RML/data
+# Database details for the R2RML tool
+R2RML_DB_URL=postgresql://postgres:postgres@postgres:5432/data
 
 # Triplestore
 SPARQL_ENDPOINT=http://graphdb:7200/repositories/data
