edit existing files

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,9 @@ R2RML_DB_URL=postgresql://postgres:postgres@postgres:5432/data
 
 # Triplestore
 SPARQL_ENDPOINT=http://graphdb:7200/repositories/data
+
+# LibreClinica
+LC_ENDPOINT=http://172.18.22.17:9001/libreclinica-ws/ws/
+LC_USER=root
+LC_PASSWORD=passwordhere
+LC_UPLOAD_CONFIG=/usr/local/airflow/upload_config.yaml
