--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
             - ./airflow/r2rml:${R2RML_DATA_DIR}/settings
             - ./input:${R2RML_DATA_DIR}/input
             - ./output:${R2RML_DATA_DIR}/output
+            - ./upload_config.yaml:/usr/local/airflow/upload_config.yaml
         ports:
             - 8080:8080
         command: webserver
