--- a/upload_config.yaml
+++ b/upload_config.yaml
@@ -1,5 +1,6 @@
 generic_list:
   study_oid: S_DEFAULTS1
+  study_identifier: protrait_test
   event_oid: SE_GENERIC_COLLECTION
   form_oid: F_PROTRAIT_GEN_2
   item_group_oid: IG_PROTR_GEN
