change repo to env vars

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ APPEND_CSV=0
 # R2RML
 R2RML_CLI_DIR=/usr/local/airflow/R2RML/R2RML-cli
 R2RML_DATA_DIR=/usr/local/airflow/R2RML/data
+R2RML_REPO=https://github.com/jaspersnel/r2rml_tests.git
+R2RML_REPO_SUBDIR=.
 # Database details for the R2RML tool
 R2RML_DB_URL=postgresql://postgres:postgres@postgres:5432/data
 
