Change to airflow 2

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,19 @@
-# Postgres
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_DB=postgres
 # Are new CSV's treated as replacements for the existing data, or as extension?
-APPEND_CSV=0
+AIRFLOW_VAR_APPEND_CSV=0
 
 # R2RML
-R2RML_CLI_DIR=/usr/local/airflow/R2RML/R2RML-cli
-R2RML_DATA_DIR=/usr/local/airflow/R2RML/data
-R2RML_REPO=https://github.com/jaspersnel/r2rml_tests.git
-R2RML_REPO_SUBDIR=.
+AIRFLOW_VAR_R2RML_CLI_DIR=/usr/local/airflow/R2RML/R2RML-cli
+AIRFLOW_VAR_R2RML_DATA_DIR=/usr/local/airflow/R2RML/data
+AIRFLOW_VAR_R2RML_REPO=https://github.com/jaspersnel/r2rml_tests.git
+AIRFLOW_VAR_R2RML_REPO_SUBDIR=.
 # Database details for the R2RML tool
-R2RML_DB_URL=postgresql://postgres:postgres@postgres:5432/data
+AIRFLOW_VAR_R2RML_DB_URL=postgresql://postgres:postgres@postgres:5432/data
 
 # Triplestore
-SPARQL_ENDPOINT=http://graphdb:7200/repositories/data
+AIRFLOW_VAR_SPARQL_ENDPOINT=http://graphdb:7200/repositories/data
 
 # LibreClinica
-LC_ENDPOINT=http://172.18.22.17:9001/libreclinica-ws/ws/
-LC_USER=root
-LC_PASSWORD=passwordhere
-LC_UPLOAD_CONFIG=/usr/local/airflow/upload_config.yaml
+AIRFLOW_VAR_LC_ENDPOINT=http://172.18.22.17:9001/libreclinica-ws/ws/
+AIRFLOW_VAR_LC_USER=root
+AIRFLOW_VAR_LC_PASSWORD=passwordhere
+AIRFLOW_VAR_LC_UPLOAD_CONFIG=/usr/local/airflow/upload_config.yaml
