--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -164,6 +164,19 @@ services:
       airflow-init:
         condition: service_completed_successfully
 
+  graphdb:
+    image: jvsoest/graphdb-free:fairstation
+    ports: 
+        - 7200:7200
+    environment:
+        - GDB_HEAP_SIZE=2g
+        - GDB_MIN_MEM=1g
+        - GDB_MAX_MEM=2g
+    depends_on:
+      <<: *airflow-common-depends-on
+      airflow-init:
+        condition: service_completed_successfully
+
   airflow-init:
     <<: *airflow-common
     entrypoint: /bin/bash
