Add back in psql database for CSV upload

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ AIRFLOW_VAR_APPEND_CSV=0
 AIRFLOW_VAR_R2RML_REPO=https://github.com/jaspersnel/r2rml_tests.git
 AIRFLOW_VAR_R2RML_REPO_SUBDIR=.
 # Database details for the R2RML tool
-AIRFLOW_VAR_R2RML_DB_URL=postgresql://postgres:postgres@postgres:5432/data
+AIRFLOW_VAR_R2RML_DB_URL=postgresql://airflow:airflow@postgres:5432/data
 
 # Triplestore
 AIRFLOW_VAR_SPARQL_ENDPOINT=http://graphdb:7200/repositories/data
