--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,13 @@
 # Are new CSV's treated as replacements for the existing data, or as extension?
 AIRFLOW_VAR_APPEND_CSV=0
+AIRFLOW_VAR_RDB_CONNSTR=postgresql://airflow:airflow@postgres:5432/data
 
 # R2RML
 AIRFLOW_VAR_R2RML_REPO=https://github.com/jaspersnel/r2rml_tests.git
 AIRFLOW_VAR_R2RML_REPO_SUBDIR=.
 # Database details for the R2RML tool
-AIRFLOW_VAR_R2RML_DB_URL=postgresql://airflow:airflow@postgres:5432/data
+AIRFLOW_VAR_RDB_USER=airflow
+AIRFLOW_VAR_RDB_password=airflow
 
 # Triplestore
 AIRFLOW_VAR_SPARQL_ENDPOINT=http://graphdb:7200/repositories/data
