--- a/upload_config.yaml
+++ b/upload_config.yaml
@@ -1,7 +1,7 @@
 generic_list:
-  study_oid: S_DEFAULTS1
-  study_identifier: protrait_test
-  event_oid: SE_GENERIC_COLLECTION
+  study_oid: S_PROTRAIT
+  study_identifier: ProTRAIT - Generic
+  event_oid: SE_GENERIC
   form_oid: F_PROTRAIT_GEN_2
   item_group_oid: IG_PROTR_GEN
   identifier_colname: GEN_IDNUMBER
@@ -50,8 +50,8 @@ generic_list:
 
       BIND(
       COALESCE(
-      IF (?GenderValue = "V ", "2", 1/0),
-      IF (?GenderValue = "M ", "1", 1/0),
+      IF (?GenderValue = "V ", "f", 1/0),
+      IF (?GenderValue = "M ", "m", 1/0),
       "9" )
       AS ?GEN_GENDER)
       }
