--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 AIRFLOW_VAR_APPEND_CSV=0
 
 # R2RML
-AIRFLOW_VAR_R2RML_REPO=https://github.com/jaspersnel/r2rml_tests.git
-AIRFLOW_VAR_R2RML_REPO_SUBDIR=.
+AIRFLOW_VAR_R2RML_REPO=https://github.com/MaastrichtU-CDS/protrait_mapping-unifications.git
+AIRFLOW_VAR_R2RML_REPO_SUBDIR=GenericList2
 # Database details for the R2RML tool
 AIRFLOW_VAR_R2RML_DB_URL=postgresql://airflow:airflow@postgres:5432/data
 
