Adding missing env vars for database

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ AIRFLOW_VAR_R2RML_REPO=https://github.com/MaastrichtU-CDS/protrait_mapping-unifi
 AIRFLOW_VAR_R2RML_REPO_SUBDIR=GenericList2
 # Database details for the R2RML tool
 AIRFLOW_VAR_R2RML_DB_URL=postgresql://airflow:airflow@postgres:5432/data
+AIRFLOW_VAR_R2RML_RDB_CONNSTR=jdbc:postgresql://postgres:5432/data
+AIRFLOW_VAR_R2RML_RDB_USER=airflow
+AIRFLOW_VAR_R2RML_RDB_PASSWORD=airflow
 
 # Triplestore
 AIRFLOW_VAR_SPARQL_ENDPOINT=http://graphdb:7200/repositories/data
