--- a/ontologies/requirements.txt
+++ b/ontologies/requirements.txt
@@ -3,3 +3,4 @@ xlrd==2.0.1
 tabulate==0.9.0
 sparql-dataframe==0.4
 git+https://github.com/MaastrichtU-CDS/ontoply.git
+git+https://github.com/RDFLib/rdflib.git
